# Smart-Harbour-Backend

./: .env.docker  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: crud.py  main.py  models.py
app/config/: __init__.py  app_config.py
app/core/: app_config.py  connection_manager.py  db.py  security.py
app/routers/: api_v1.py  boats.py  deps.py  login.py
certs/: cert.conf  csr.conf  rootCA.crt  rootCA.key  server.crt  server.csr  server.key
data/: README.md  camera_preview_1.base64  camera_preview_2.base64  init_db.json
init/: init_db.json
nginx/: default.conf
src/: main.py
