[project]
name = "smart-harbour-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Radek Svoboda", email = "rasvob14@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start.cmd = "uvicorn app.main:app --reload"
start.env_file = ".env"

start-docker-dev.cmd = "uvicorn app.main:app --host 0.0.0.0 --port 8010 --reload --log-level debug --use-colors"
start-docker-prod.cmd = "uvicorn app.main:app --host 0.0.0.0 --port 443 --log-level info"